# starkit-ransac-python

./: .gitignore  Dockerfile  README.md  build_docker.sh  process_benchmarks.py  pyproject.toml  ransac_3d.py  run_docker.sh  todo.md
.github/workflows/: python-publish.yml
docs/: Mobius_strip.md  cylindrical_ring.md  ellipsoid_doc.md  point.md  stairs.md
examples/: example_circle.py  example_circle2d.py  example_cylindrical_ring.py  example_ellipse2d.py  example_ellipsoid.py  example_line.py  example_mobius_strip.py  example_plane.py  example_point.py  example_sphere.py  example_stairs.py  test_stairs.py
ransac3d/: abstract_surface.py  ransac_3d.py
ransac3d/surfaces/: ELLIPSOID_NEW.py  ellipsoid.py  plane.py  point.py
src/starkit_ransac/: __init__.py  abstract_surface.py  ransac_3d.py
starkit_ransac/: __init__.py  abstract_surface.py  ransac_3d.py  utils.py
starkit_ransac/generators/: Mobius_strip.py  circle.py  circle2d.py  ellipse2d.py  ellipsoid.py  generators.py  line3d.py  plane.py  sphere.py
starkit_ransac/surfaces/: ELLIPSOID_NEW.py  Mobius_strip.py  __init__.py  circle.py  circle2d.py  cylindrical_ring.py  ellipse2d.py  ellipsoid.py  line3d.py  plane.py  point.py  sphere.py  stairs.py
starkit_ransac/visualisation/: Mobius_strip.py  circle.py  circle2d.py  cylindircal_ring.py  ellipsoid.py  (+5 more)
test/: conftest.py  test_ELLIPSOID_NEW.py  test_circle.py  test_circle2d.py  test_cylinder.py  test_cylindrical_ring.py  test_ellipse2d.py  test_ellipsoid.py  test_line.py  test_mobius_strip.py  test_plane.py  test_point.py  test_sphere.py  test_stairs.py
(+13 files in other folders)
