[project]
name = "starkit-ransac"
version = "0.0.1"
description = "A library for RANSAC with most common objects"
authors = [
    { name = "Skorobogatov Egor", email = "skorobogatov.ev@phystech.edu" }
]
license = "MIT"
readme = "README.md"
dependencies = [
    "numpy==2.4.2"
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

